Fix avatar distortion

--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -190,7 +190,7 @@
   }
 
   .author-avatar {
-    width: 140px;
+    width: 128px;
     height: 140px;
     border-radius: 100%;
     user-select: none;
